# inference-sdk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/fetch/: OpenCV.cmake
example/: CMakeLists.txt  main.cpp
include/: inference_module.hpp
src/: CMakeLists.txt  inference_module.cpp
